--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,49 @@
-**/.DS_Store
-.vscode/
+# Python
 __pycache__/
-tweak_monitor/.theos/
-tweak_monitor/packages/
+*.py[cod]
+*$py.class
+*.so
+.Python
+env/
+venv/
+ENV/
+*.egg-info/
+dist/
+build/
+.eggs/
+*.manifest
+*.spec
+
+# IDE
+.idea/
+.vscode/
+*.swp
+*.swo
+*~
+.DS_Store
+Thumbs.db
+
+# OS
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Virtual Environment
+venv/
+.venv/
+env/
+.Env/
+
+# PyCharm
+.idea/
+*.iml
+*.ipr
+*.iws
+
+# Frida
+frida_agent.so
+*.dylib.backup
